--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -13,6 +13,6 @@
     >
       Haris Raharjo
     </a>
-    . with <span class="text-red-500">❤️</span> using Astro and Tailwind CSS.
+    using Astro and Tailwind CSS.
   </p>
 </footer>
