--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -13,7 +13,7 @@ interface Props {
 const { title, description, ogImage } = Astro.props
 ---
 
-<html lang="en" class="lg:scroll-pt-[100vh]">
+<html lang="en">
   <head>
     <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ViewTransitions />
