--- a/src/components/sections/ExperienceCard.astro
+++ b/src/components/sections/ExperienceCard.astro
@@ -1,17 +1,65 @@
 ---
-import { EXPERIENCE } from '../../lib/constants'
 import Card from '../Card.astro'
+
+export const EXPERIENCE = [
+  {
+    company: 'Evo Smartlife',
+    location: 'Indonesia',
+    position: 'Fullstack Software Engineer',
+    start: '2023',
+    link: 'https://straico.com/',
+    end: '2024',
+    tasks: [
+      'Proactively determined and analyzed the negative impacts caused by existing tools and led the creation of a new frontend on top of existing tools',
+      'Identified, fixed the database which then results in a better clustering and an increase query performance and better database paging',
+      'Built a couple desktop applications with a low memory footprint to fit in user hardware specification for monitoring and automation',
+      'Maintain & develop a backend with real time system capability',
+    ],
+    tools: [
+      'Python',
+      'Rust',
+      'HomeAssistant',
+      'Javascript',
+      'HTML',
+      'CSS',
+      'MySql',
+      'AWS',
+    ],
+  },
+  {
+    company: 'Merpati Maintenance Facility',
+    location: 'Indonesia',
+    position: 'Freelance Backend Developer',
+    start: '2019',
+    link: '',
+    end: '2019',
+    tasks: ['Developed REST API in Laravel for warehouses management system'],
+    tools: ['Laravel', 'PHP'],
+  },
+  {
+    company: 'Geo Medika Clinic',
+    location: 'Indonesia',
+    position: 'Freelance Android Developer',
+    start: '2019',
+    link: '',
+    end: '2019',
+    tasks: [
+      'Develop an android application for doctor appointment using a NoSQL document based as the database',
+    ],
+    tools: ['Android', 'Kotlin', 'Firestore'],
+  },
+]
 ---
 
-<div class="pt-8 flex flex-col gap-8">
+<div class="flex flex-col gap-8 pt-8">
   {
     EXPERIENCE.map((entry) => (
       <div>
         <div class="text-sm uppercase">
           {entry.start} - {entry.end}
         </div>
-        <h3 class={`text-primary font-semibold`}>{entry.company}</h3>
-        <div class="text-sm font-semibold">{entry.position}</div>
+        <div class="text-primary font-semibold">{entry.position}</div>
+        <h3 class="text-sm font-semibold">{entry.company}</h3>
         {entry.tasks.map((i) => {
           if (entry.tasks.length > 1) {
             return (
@@ -23,7 +71,7 @@ import Card from '../Card.astro'
 
           return <p>{i}</p>
         })}
-        <div class="flex flex-wrap gap-1 mt-4">
+        <div class="mt-4 flex flex-wrap gap-1">
           {entry.tools.map((tool) => (
             <Card styling="px-4 py-2 bg-orange-500/20 backdrop-blur-md border border-orange-400/30 text-orange-200 rounded-full text-sm text-center">
               <p slot="content">{tool}</p>
