--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -19,16 +19,16 @@ import { Contact as ContactIcon } from 'lucide-react'
 </script>
 
 <header
-  class="dark:border-none dark:bg-inherit text-card-foreground bg-background/95 supports-[backdrop-filter]:bg-background/60 sticky top-0 z-50 m-0 flex h-16 w-full items-center space-x-4 border-b p-8 backdrop-blur sm:justify-between sm:space-x-0"
+  class="bg-background/95 supports-[backdrop-filter]:bg-background/60 fixed top-0 z-50 m-0 flex h-16 w-full items-center space-x-4 border-none bg-inherit p-8 backdrop-blur sm:justify-between sm:space-x-0"
 >
   <div class="flex gap-6 md:gap-10">
     <a href="/" class="flex items-center space-x-2">
-      <span class="inline-block font-bold">/</span>
+      <span class="text-green inline-block text-xl font-bold">H</span>
     </a>
   </div>
   <nav class="flex flex-1 items-center justify-end space-x-4">
     <details class="relative md:hidden">
-      <summary class="list-none cursor-pointer "><ContactIcon /></summary>
+      <summary class="cursor-pointer list-none"><ContactIcon /></summary>
       <Contact styling="absolute flex flex-col bg-card" />
     </details>
     <Contact styling="hidden md:block" />
