--- a/src/components/sections/Tech.astro
+++ b/src/components/sections/Tech.astro
@@ -49,7 +49,7 @@ export const techs = [
     icons: ['tauri'],
   },
   {
-    name: 'Virtualization & Containers',
+    name: 'Containers',
     members: ['Docker', 'WASM'],
     icons: ['docker', 'wa'],
   },
@@ -60,48 +60,23 @@ export const techs = [
   },
 ]
 
-const navIDs = techs.map((tech) => tech.name.replaceAll(' ', '').toLowerCase())
-
-// let bgHover: string[][] = []
-// let bg: string[][] = []
-// for (let i = 0; i < techs.length; i++) {
-//   const _colors = techs[i].colors
-//   bgHover.push(_colors.map((color) => `hover:bg-${color}-950/20`))
-//   bg.push(_colors.map((color) => `bg-${color}-600`))
-// }
+const navIDs = techs.map((tech) => tech.name)
 ---
 
-<div
-  class="flex max-h-96 w-full touch-auto snap-x snap-mandatory gap-8 overflow-auto scroll-smooth"
->
-  <Carousel data={navIDs}>
-    {
-      techs.map((tech, i1) => {
-        return (
-          <div id={navIDs[i1]} class="w-full shrink-0 snap-center px-4">
-            <h3 class="mb-4 text-center text-xl font-bold text-red-300">
-              {tech.name}
-            </h3>
-            <div class="grid w-full grid-cols-3 gap-2 lg:grid-cols-2">
-              {tech.members.map((member, i) => {
-                return (
-                  <div
-                    class={`hover:bg-primary-950/20 glass-card flex aspect-auto flex-col items-center justify-center rounded-xl p-3 transition-colors lg:aspect-square`}
-                  >
-                    <Icon name={tech.icons[i]} class="h-10 w-10" />
-                    {/* <div
-                      class={`bg-primary mb-2 flex h-10 w-10 items-center justify-center rounded-lg text-sm font-bold text-white`}
-                    ></div> */}
-                    <span class="text-center text-xs font-semibold">
-                      {member}
-                    </span>
-                  </div>
-                )
-              })}
-            </div>
-          </div>
-        )
+
+<Carousel data={navIDs}>
+  {
+techs.map((tech,i) => (
+  <div id=`tech-${i}` class=`snap-start py-12 shrink-0 w-full pr-0 tab-content` data-content={i}>
+    <div class="flex-wrap flex gap-4">
+      {
+      tech.members.map((member, i) => {
+      return <Icon name={tech.icons[i]} width={"3rem"} height={"3rem"} class="shrink-0 min-w-0 max-w-full flex-initial" />
       })
-    }
-  </Carousel>
-</div>
+      }
+    </div>
+  </div>
+  ))
+  }
+</Carousel>
+
