--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -18,11 +18,11 @@ const { title, description, ogImage } = Astro.props
     <HeadSEO title={title} description={description} ogImage={ogImage} />
     <ViewTransitions />
   </head>
-  <body class="min-h-screen font-sans antialiased">
-    <div class="flex flex-col items-center justify-center">
-      <Header />
-      <slot />
-      <Footer />
-    </div>
+  <body class="font-mono antialiased">
+    <!-- <div class="flex flex-col items-center justify-center"> -->
+    <Header />
+    <slot />
+    <Footer />
+    <!-- </div> -->
   </body>
 </html>
