--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -4,7 +4,7 @@
   <p
     class="text-muted-foreground text-center text-sm leading-loose md:text-left"
   >
-    Built by{' '}
+    Built by{" "}
     <a
       href="https://github.com/harisraharjo"
       target="_blank"
