--- a/src/components/sections/Tab.astro
+++ b/src/components/sections/Tab.astro
@@ -12,15 +12,15 @@ interface Props {
   title: string
   path: string
 }
-const {isActive, icon, title, path}= Astro.props
+const { isActive, icon, title, path } = Astro.props
 ---
 
 <a
   href={path}
   class={`inline-block rounded-full px-4 py-2 text-sm font-medium transition-all duration-300 ${
     isActive
-      ? 'bg-gray-100 text-gray-700 hover:bg-gray-200 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600'
-      : 'scale-105 transform bg-primary text-white shadow-lg'
+      ? "bg-gray-100 text-gray-700 hover:bg-gray-200 dark:bg-gray-700 dark:text-gray-300 dark:hover:bg-gray-600"
+      : "scale-105 transform bg-primary text-white shadow-lg"
   }`}
 >
   <span class="mr-2">{icon}</span>
