--- a/src/layouts/BottomLayout.astro
+++ b/src/layouts/BottomLayout.astro
@@ -1,11 +1,11 @@
 ---
-import Container from '../components/Container.astro'
+import Container from "../components/Container.astro"
 
 interface Props {
-  size?: 'sm' | 'md' | 'lg' | 'xl' | '2xl'
+  size?: "sm" | "md" | "lg" | "xl" | "2xl"
 }
 
-const { size = 'md' } = Astro.props
+const { size = "md" } = Astro.props
 ---
 
 <div class="flex-1 py-5">
