--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,21 +1,21 @@
 ---
-import { ModeToggle } from '../components/ui/ThemeToggle'
-import Contact from './sections/Contact.astro'
-import { Contact as ContactIcon } from 'lucide-react'
+import { ModeToggle } from "../components/ui/ThemeToggle"
+import Contact from "./sections/Contact.astro"
+import { Contact as ContactIcon } from "lucide-react"
 ---
 
 <script is:inline>
-  document.addEventListener('astro:after-swap', function () {
-    if (localStorage.getItem('theme') === 'dark')
-      document.documentElement.classList.toggle('dark', true)
+  document.addEventListener("astro:after-swap", function () {
+    if (localStorage.getItem("theme") === "dark")
+      document.documentElement.classList.toggle("dark", true)
   })
 
   const getThemePreference = () => {
-    return localStorage.getItem('theme')
+    return localStorage.getItem("theme")
   }
 
-  const isDark = getThemePreference() === 'dark'
-  document.documentElement.classList[isDark ? 'add' : 'remove']('dark')
+  const isDark = getThemePreference() === "dark"
+  document.documentElement.classList[isDark ? "add" : "remove"]("dark")
 </script>
 
 <header
@@ -33,6 +33,6 @@ import { Contact as ContactIcon } from 'lucide-react'
     </details>
     <Contact styling="hidden md:block" />
 
-    <ModeToggle transition:persist client:load />
+    <!-- <ModeToggle transition:persist client:load /> -->
   </nav>
 </header>
