--- a/src/components/sections/Tech.astro
+++ b/src/components/sections/Tech.astro
@@ -62,16 +62,14 @@ export const techs = [
 
 const navIDs = techs.map((tech) => tech.name)
 ---
-
-
 <Carousel data={navIDs}>
   {
-techs.map((tech,i) => (
-  <div id=`tech-${i}` class=`snap-start py-12 shrink-0 w-full pr-0 tab-content` data-content={i}>
+  techs.map((tech,i) => (
+  <div id=`tech-${i}` class="snap-start py-12 shrink-0 w-full pr-0 tab-content">
     <div class="flex-wrap flex gap-4">
       {
       tech.members.map((member, i) => {
-      return <Icon name={tech.icons[i]} width={"3rem"} height={"3rem"} class="shrink-0 min-w-0 max-w-full flex-initial" />
+      return <Icon name={tech.icons[i]} width="3rem" height="3rem" class="shrink-0 min-w-0 max-w-full flex-initial" />
       })
       }
     </div>
