--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -1,8 +1,8 @@
 ---
-import { ViewTransitions } from 'astro:transitions'
-import HeadSEO from '../components/HeadSEO.astro'
-import Footer from '../components/Footer.astro'
-import Header from '../components/Header.astro'
+import { ViewTransitions } from "astro:transitions"
+import HeadSEO from "../components/HeadSEO.astro"
+import Footer from "../components/Footer.astro"
+import Header from "../components/Header.astro"
 
 interface Props {
   title?: string | undefined
@@ -19,10 +19,10 @@ const { title, description, ogImage } = Astro.props
     <ViewTransitions />
   </head>
   <body class="font-mono antialiased">
-    <!-- <div class="flex flex-col items-center justify-center"> -->
-    <Header />
-    <slot />
-    <Footer />
-    <!-- </div> -->
+    <div class="flex flex-col items-center justify-center">
+      <Header />
+      <slot />
+      <Footer />
+    </div>
   </body>
 </html>
