--- a/src/layouts/TopLayout.astro
+++ b/src/layouts/TopLayout.astro
@@ -1,8 +1,8 @@
 ---
-import Container from '../components/Container.astro'
+import Container from "../components/Container.astro"
 ---
 
-<div class="pb-5 pt-6">
+<div class="pt-6 pb-5">
   <Container size="md">
     <slot />
   </Container>
