--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -1,7 +1,7 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
+import BaseLayout from "../layouts/BaseLayout.astro"
 
-import { buttonVariants } from '../components/ui/button'
+import { buttonVariants } from "../components/ui/button"
 ---
 
 <BaseLayout
@@ -11,7 +11,7 @@ import { buttonVariants } from '../components/ui/button'
   <main class="flex h-[80vh] flex-auto">
     <div class="flex flex-col items-center justify-center px-8">
       <img src="/me_hello.png" alt="404" class="mb-8 size-64" />
-      <p class="text-sm text-muted-foreground">404</p>
+      <p class="text-muted-foreground text-sm">404</p>
       <h1 class="text-4xl font-extrabold tracking-tight lg:text-5xl">
         Page not found
       </h1>
