--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,31 +1,34 @@
 ---
-import BaseLayout from '../layouts/BaseLayout.astro'
-import Tech from '../components/sections/Tech.astro'
-import Accordion from '../components/ui/accordion.astro'
-import ProjectCard from '../components/sections/ProjectCard.astro'
+import BaseLayout from "../layouts/BaseLayout.astro"
+import Tech from "../components/sections/Tech.astro"
+import Section from "../components/sections/index.astro"
+import ProjectCard from "../components/sections/ProjectCard.astro"
 // import Card from '../components/Card.astro'
-import ExperienceCard from '../components/sections/ExperienceCard.astro'
-import Terminal from '../components/terminal/index.astro'
-import { ConstructionIcon } from 'lucide-react'
+import ExperienceCard from "../components/sections/ExperienceCard.astro"
+import Terminal from "../components/terminal/index.astro"
+import { ConstructionIcon } from "lucide-react"
 // import { ArrowLeftCircle, SquareArrowOutUpRight } from 'lucide-react'
 //
 const code_block = `
-01001000 
-01100001
-01110010
-01101001
-01110011
+01110111
+01100101
+01101100
+01100011
+01101111
+01101101
+01100101
 `
 ---
 
+<!-- <style> --><!--   h2::first-letter() { --><!--     color: var(--color-red); --><!--   } --><!-- </style> -->
 <script>
   document
-    .getElementById('translateBtn')
-    .addEventListener('click', function () {
-      const meaning = document.getElementById('meaning')
-      const code_block = document.getElementById('code')
-      meaning.classList.toggle('hidden')
-      code_block.classList.toggle('hidden')
+    .getElementById("translateBtn")
+    .addEventListener("click", function () {
+      const meaning = document.getElementById("meaning")
+      const code_block = document.getElementById("code")
+      meaning.classList.toggle("hidden")
+      code_block.classList.toggle("hidden")
     })
 </script>
 <BaseLayout
@@ -44,10 +47,15 @@ const code_block = `
       class="hidden items-center justify-center md:col-span-1 lg:col-span-1 lg:flex lg:flex-col"
     >
       <pre
-        id="code"
-        class="text-green skew-ascii font-mono text-sm leading-tight opacity-50">
-        {code_block} 
+        class="text-green ascii-h font-mono text-2xl leading-tight opacity-50">
+    .-------.
+   /       /|
+  '-------' |
+  |       | '
+  |       |/
+  '-------'
       </pre>
+
       <pre
         id="meaning"
         class="text-green skew-ascii hidden font-mono text-sm leading-tight opacity-50">
@@ -61,24 +69,15 @@ const code_block = `
       </button>
     </div>
 
-    <section id="tech" class="px-6 py-20 md:col-span-4">
-      <div class="mx-auto max-w-5xl">
-        <h2 class="section-title pb-4">Technologies</h2>
-        <Tech />
-      </div>
-    </section>
-
-    <section id="about" class="py-20 lg:col-span-2">
-      <h2 class="section-title">Experience</h2>
-      <ExperienceCard />
-    </section>
-
-    <section id="about" class="py-20 lg:col-span-2">
-      <h2 class="section-title flex gap-2">
-        Projects
-        <ConstructionIcon />
-      </h2>
+    <Section title="Technologies" id="tech">
+      <Tech slot="content" />
+    </Section>
+    <Section title="Experience" id="experience">
+      <ExperienceCard slot="content" />
+    </Section>
+    <Section title="Project" id="project">
+      <ConstructionIcon slot="header" />
       <ProjectCard slot="content" />
-    </section>
+    </Section>
   </main>
 </BaseLayout>
