--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,4 +1,4 @@
-@import 'tailwindcss';
+@import "tailwindcss";
 
 /* @custom-variant dark (&:where(.dark, .dark *));  */
 @layer utilities, base, components;
@@ -13,7 +13,7 @@
   body {
     background: #1e2326;
     color: #d3c6aa;
-    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', sans-serif;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
     line-height: 1.6;
   }
 
@@ -112,7 +112,7 @@
   }
 
   .link-hover::after {
-    content: '';
+    content: "";
     position: absolute;
     bottom: -2px;
     left: 0;
@@ -209,19 +209,23 @@
     }
   }
 
-  .section-title {
-    color: #a7c080;
-    font-size: 2rem;
-    font-weight: 600;
-    display: flex;
-    align-items: center;
-    gap: 1rem;
-  }
-
-  .section-title::before {
-    content: '';
-    width: 40px;
-    height: 2px;
-    background: #a7c080;
-  }
+  /* .section-title { */
+  /*   /* color: #a7c080; */ */
+  /*   font-size: 2rem; */
+  /*   font-weight: 600; */
+  /*   /* display: flex; */ */
+  /*   /* align-items: center; */ */
+  /*   gap: 1rem; */
+  /* } */
+  /* .section-title::first-letter { */
+  /*   color: var(--color-red); */
+  /*   font-weight: bold; */
+  /* } */
+  /**/
+  /* .section-title::before { */
+  /*   content: ""; */
+  /*   width: 40px; */
+  /*   height: 2px; */
+  /*   background: var(--color-red); */
+  /* } */
 }
