change svgs, navigation menu on small screen

--- a/src/components/sections/ExperienceCard.astro
+++ b/src/components/sections/ExperienceCard.astro
@@ -52,7 +52,7 @@ export const EXPERIENCE = [
   {
     EXPERIENCE.map((entry) => (
       <div>
-        <div class="text-xl font-semibold">{entry.position}</div>
+        <div class="text-green text-xl font-semibold">{entry.position}</div>
         <h3 class="text-grey text-sm font-semibold">{entry.company}</h3>
         <div class="text-grey text-sm uppercase">
           {entry.start} - {entry.end}
