--- a/src/components/sections/index.astro
+++ b/src/components/sections/index.astro
@@ -25,7 +25,7 @@ const { title, id } = Astro.props
     <h2
       class="section-title-container flex items-center gap-2 text-2xl font-bold"
     >
-      <span class="section-title text-green">
+      <span class="section-title text-aqua">
         {title}
       </span>
       <slot name="header" />
