--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,25 +1,10 @@
 ---
-import { ModeToggle } from "../components/ui/ThemeToggle"
 import Contact from "./sections/Contact.astro"
 import { Contact as ContactIcon } from "lucide-react"
 ---
 
-<script is:inline>
-  document.addEventListener("astro:after-swap", function () {
-    if (localStorage.getItem("theme") === "dark")
-      document.documentElement.classList.toggle("dark", true)
-  })
-
-  const getThemePreference = () => {
-    return localStorage.getItem("theme")
-  }
-
-  const isDark = getThemePreference() === "dark"
-  document.documentElement.classList[isDark ? "add" : "remove"]("dark")
-</script>
-
 <header
-  class="bg-background/95 supports-[backdrop-filter]:bg-background/60 fixed top-0 z-50 m-0 flex h-16 w-full items-center space-x-4 border-none bg-inherit p-8 backdrop-blur sm:justify-between sm:space-x-0"
+  class="bg-background/95 supports-[backdrop-filter]:bg-background/60 fixed top-0 z-50 m-0 flex h-16 w-full items-center space-x-4 border-none bg-inherit p-8 backdrop-blur sm:justify-between"
 >
   <div class="flex gap-6 md:gap-10">
     <a href="/" class="flex items-center space-x-2">
@@ -27,12 +12,14 @@ import { Contact as ContactIcon } from "lucide-react"
     </a>
   </div>
   <nav class="flex flex-1 items-center justify-end space-x-4">
-    <details class="relative md:hidden">
-      <summary class="cursor-pointer list-none"><ContactIcon /></summary>
-      <Contact styling="absolute flex flex-col bg-card" />
+    <details class="relative m-0 p-0 md:hidden">
+      <summary class="text-green m-0 cursor-pointer list-none p-0">
+        <ContactIcon />
+      </summary>
+      <Contact
+        styling="bg-dark absolute right-0 flex flex-col items-center mt-2 w-30 rounded-lg shadow-xl border border-gray-100 py-2"
+      />
     </details>
     <Contact styling="hidden md:block" />
-
-    <!-- <ModeToggle transition:persist client:load /> -->
   </nav>
 </header>
