--- a/src/components/sections/ProjectCard.astro
+++ b/src/components/sections/ProjectCard.astro
@@ -38,7 +38,7 @@ const Projects: Project = [
   {
     Projects.map((project) => (
       <div>
-        <div class="text-xl font-semibold">{project.name}</div>
+        <div class="text-green text-xl font-semibold">{project.name}</div>
         <h3 class="text-grey text-sm font-semibold">{project.company}</h3>
         <p>{project.desc}</p>
         <div class="text-aqua mt-4 flex flex-wrap gap-1">
