--- a/src/components/sections/ExperienceCard.astro
+++ b/src/components/sections/ExperienceCard.astro
@@ -8,10 +8,10 @@ export const EXPERIENCE = [
     link: "https://straico.com/",
     end: "2024",
     tasks: [
-      "Proactively determined and analyzed the negative impacts caused by existing tools and led the creation of a new frontend on top of existing tools",
+      "Determined and analyzed the negative impacts caused by existing tools and led the creation of a new frontend on top of existing tools",
       "Identified, fixed the database which then results in a better clustering and an increase query performance and better database paging",
-      "Built a couple desktop applications with a low memory footprint to fit in user hardware specification for monitoring and automation",
-      "Maintain & develop a backend with real time system capability",
+      "Built a desktop applications with a low memory footprint to fit in user hardware specification for monitoring and automation",
+      "Maintained & developed a backend with real time system capability",
     ],
     tools: [
       "Python",
