--- a/src/components/sections/ExperienceCard.astro
+++ b/src/components/sections/ExperienceCard.astro
@@ -10,7 +10,7 @@ export const EXPERIENCE = [
     tasks: [
       "Determined and analyzed the negative impacts caused by existing tools and led the creation of a new frontend on top of existing tools",
       "Identified, fixed the database which then results in a better clustering and an increase query performance and better database paging",
-      "Built a desktop applications with a low memory footprint to fit in user hardware specification for monitoring and automation",
+      "Built a desktop application for monitoring and automation on the user server",
       "Maintained & developed a backend with real time system capability",
     ],
     tools: [
